tests/parse_print/random_perturb/set01/change-07/stderr.expected
Error:
    Parser error in file: tests/parse_print/random_perturb/set01/change-07/change-07.essence Error is:
ValidatorError tests/parse_print/random_perturb/set01/change-07/change-07.essence:3:14:
  |
3 | find x : set (sizo 2) of int(1..3)
  |              ^
Missing of

tests/parse_print/random_perturb/set01/change-07/change-07.essence:3:15:
  |
3 | find x : set (sizo 2) of int(1..3)
  |               ^^^^
Error: Symbol not found "sizo"

tests/parse_print/random_perturb/set01/change-07/change-07.essence:3:20:
  |
3 | find x : set (sizo 2) of int(1..3)
  |                    ^^^^^^^^^^^^^^^
Skipped tokens
